seaqt/QtWidgets/gen_qgraphicsview.nim


proc fcQGraphicsView_new(parent: pointer): ptr cQGraphicsView {.importc: "QGraphicsView_new".}
proc fcQGraphicsView_new2(): ptr cQGraphicsView {.importc: "QGraphicsView_new2".}
proc fcQGraphicsView_new3(scene: pointer): ptr cQGraphicsView {.importc: "QGraphicsView_new3".}
proc fcQGraphicsView_new4(scene: pointer, parent: pointer): ptr cQGraphicsView {.importc: "QGraphicsView_new4".}
proc fcQGraphicsView_metaObject(self: pointer, ): pointer {.importc: "QGraphicsView_metaObject".}
proc fcQGraphicsView_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsView_metacast".}
proc fcQGraphicsView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsView_metacall".}
proc fcQGraphicsView_tr(s: cstring): struct_miqt_string {.importc: "QGraphicsView_tr".}
proc fcQGraphicsView_sizeHint(self: pointer, ): pointer {.importc: "QGraphicsView_sizeHint".}
proc fcQGraphicsView_renderHints(self: pointer, ): cint {.importc: "QGraphicsView_renderHints".}
proc fcQGraphicsView_setRenderHint(self: pointer, hint: cint): void {.importc: "QGraphicsView_setRenderHint".}
proc fcQGraphicsView_setRenderHints(self: pointer, hints: cint): void {.importc: "QGraphicsView_setRenderHints".}
proc fcQGraphicsView_alignment(self: pointer, ): cint {.importc: "QGraphicsView_alignment".}
proc fcQGraphicsView_setAlignment(self: pointer, alignment: cint): void {.importc: "QGraphicsView_setAlignment".}
proc fcQGraphicsView_transformationAnchor(self: pointer, ): cint {.importc: "QGraphicsView_transformationAnchor".}
proc fcQGraphicsView_setTransformationAnchor(self: pointer, anchor: cint): void {.importc: "QGraphicsView_setTransformationAnchor".}
proc fcQGraphicsView_resizeAnchor(self: pointer, ): cint {.importc: "QGraphicsView_resizeAnchor".}
proc fcQGraphicsView_setResizeAnchor(self: pointer, anchor: cint): void {.importc: "QGraphicsView_setResizeAnchor".}
proc fcQGraphicsView_viewportUpdateMode(self: pointer, ): cint {.importc: "QGraphicsView_viewportUpdateMode".}
proc fcQGraphicsView_setViewportUpdateMode(self: pointer, mode: cint): void {.importc: "QGraphicsView_setViewportUpdateMode".}
proc fcQGraphicsView_optimizationFlags(self: pointer, ): cint {.importc: "QGraphicsView_optimizationFlags".}
proc fcQGraphicsView_setOptimizationFlag(self: pointer, flag: cint): void {.importc: "QGraphicsView_setOptimizationFlag".}
proc fcQGraphicsView_setOptimizationFlags(self: pointer, flags: cint): void {.importc: "QGraphicsView_setOptimizationFlags".}
proc fcQGraphicsView_dragMode(self: pointer, ): cint {.importc: "QGraphicsView_dragMode".}
proc fcQGraphicsView_setDragMode(self: pointer, mode: cint): void {.importc: "QGraphicsView_setDragMode".}
proc fcQGraphicsView_rubberBandSelectionMode(self: pointer, ): cint {.importc: "QGraphicsView_rubberBandSelectionMode".}
proc fcQGraphicsView_setRubberBandSelectionMode(self: pointer, mode: cint): void {.importc: "QGraphicsView_setRubberBandSelectionMode".}
proc fcQGraphicsView_rubberBandRect(self: pointer, ): pointer {.importc: "QGraphicsView_rubberBandRect".}
proc fcQGraphicsView_cacheMode(self: pointer, ): cint {.importc: "QGraphicsView_cacheMode".}
proc fcQGraphicsView_setCacheMode(self: pointer, mode: cint): void {.importc: "QGraphicsView_setCacheMode".}
proc fcQGraphicsView_resetCachedContent(self: pointer, ): void {.importc: "QGraphicsView_resetCachedContent".}
proc fcQGraphicsView_isInteractive(self: pointer, ): bool {.importc: "QGraphicsView_isInteractive".}
proc fcQGraphicsView_setInteractive(self: pointer, allowed: bool): void {.importc: "QGraphicsView_setInteractive".}
proc fcQGraphicsView_scene(self: pointer, ): pointer {.importc: "QGraphicsView_scene".}
proc fcQGraphicsView_setScene(self: pointer, scene: pointer): void {.importc: "QGraphicsView_setScene".}
proc fcQGraphicsView_sceneRect(self: pointer, ): pointer {.importc: "QGraphicsView_sceneRect".}
proc fcQGraphicsView_setSceneRect(self: pointer, rect: pointer): void {.importc: "QGraphicsView_setSceneRect".}
proc fcQGraphicsView_setSceneRect2(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QGraphicsView_setSceneRect2".}
proc fcQGraphicsView_transform(self: pointer, ): pointer {.importc: "QGraphicsView_transform".}
proc fcQGraphicsView_viewportTransform(self: pointer, ): pointer {.importc: "QGraphicsView_viewportTransform".}
proc fcQGraphicsView_isTransformed(self: pointer, ): bool {.importc: "QGraphicsView_isTransformed".}
proc fcQGraphicsView_setTransform(self: pointer, matrix: pointer): void {.importc: "QGraphicsView_setTransform".}
proc fcQGraphicsView_resetTransform(self: pointer, ): void {.importc: "QGraphicsView_resetTransform".}
proc fcQGraphicsView_rotate(self: pointer, angle: float64): void {.importc: "QGraphicsView_rotate".}
proc fcQGraphicsView_scale(self: pointer, sx: float64, sy: float64): void {.importc: "QGraphicsView_scale".}
proc fcQGraphicsView_shear(self: pointer, sh: float64, sv: float64): void {.importc: "QGraphicsView_shear".}
proc fcQGraphicsView_translate(self: pointer, dx: float64, dy: float64): void {.importc: "QGraphicsView_translate".}
proc fcQGraphicsView_centerOn(self: pointer, pos: pointer): void {.importc: "QGraphicsView_centerOn".}
proc fcQGraphicsView_centerOn2(self: pointer, x: float64, y: float64): void {.importc: "QGraphicsView_centerOn2".}
proc fcQGraphicsView_centerOnWithItem(self: pointer, item: pointer): void {.importc: "QGraphicsView_centerOnWithItem".}
proc fcQGraphicsView_ensureVisible(self: pointer, rect: pointer): void {.importc: "QGraphicsView_ensureVisible".}
proc fcQGraphicsView_ensureVisible2(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QGraphicsView_ensureVisible2".}
proc fcQGraphicsView_ensureVisibleWithItem(self: pointer, item: pointer): void {.importc: "QGraphicsView_ensureVisibleWithItem".}
proc fcQGraphicsView_fitInView(self: pointer, rect: pointer): void {.importc: "QGraphicsView_fitInView".}
proc fcQGraphicsView_fitInView2(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QGraphicsView_fitInView2".}
proc fcQGraphicsView_fitInViewWithItem(self: pointer, item: pointer): void {.importc: "QGraphicsView_fitInViewWithItem".}
proc fcQGraphicsView_render(self: pointer, painter: pointer): void {.importc: "QGraphicsView_render".}
proc fcQGraphicsView_items(self: pointer, ): struct_miqt_array {.importc: "QGraphicsView_items".}
proc fcQGraphicsView_itemsWithPos(self: pointer, pos: pointer): struct_miqt_array {.importc: "QGraphicsView_itemsWithPos".}
proc fcQGraphicsView_items2(self: pointer, x: cint, y: cint): struct_miqt_array {.importc: "QGraphicsView_items2".}
proc fcQGraphicsView_itemsWithRect(self: pointer, rect: pointer): struct_miqt_array {.importc: "QGraphicsView_itemsWithRect".}
proc fcQGraphicsView_items3(self: pointer, x: cint, y: cint, w: cint, h: cint): struct_miqt_array {.importc: "QGraphicsView_items3".}
proc fcQGraphicsView_itemsWithPath(self: pointer, path: pointer): struct_miqt_array {.importc: "QGraphicsView_itemsWithPath".}
proc fcQGraphicsView_itemAt(self: pointer, pos: pointer): pointer {.importc: "QGraphicsView_itemAt".}
proc fcQGraphicsView_itemAt2(self: pointer, x: cint, y: cint): pointer {.importc: "QGraphicsView_itemAt2".}
proc fcQGraphicsView_mapToScene(self: pointer, point: pointer): pointer {.importc: "QGraphicsView_mapToScene".}
proc fcQGraphicsView_mapToSceneWithPath(self: pointer, path: pointer): pointer {.importc: "QGraphicsView_mapToSceneWithPath".}
proc fcQGraphicsView_mapFromScene(self: pointer, point: pointer): pointer {.importc: "QGraphicsView_mapFromScene".}
proc fcQGraphicsView_mapFromSceneWithPath(self: pointer, path: pointer): pointer {.importc: "QGraphicsView_mapFromSceneWithPath".}
proc fcQGraphicsView_mapToScene2(self: pointer, x: cint, y: cint): pointer {.importc: "QGraphicsView_mapToScene2".}
proc fcQGraphicsView_mapFromScene2(self: pointer, x: float64, y: float64): pointer {.importc: "QGraphicsView_mapFromScene2".}
proc fcQGraphicsView_inputMethodQuery(self: pointer, query: cint): pointer {.importc: "QGraphicsView_inputMethodQuery".}
proc fcQGraphicsView_backgroundBrush(self: pointer, ): pointer {.importc: "QGraphicsView_backgroundBrush".}
proc fcQGraphicsView_setBackgroundBrush(self: pointer, brush: pointer): void {.importc: "QGraphicsView_setBackgroundBrush".}
proc fcQGraphicsView_foregroundBrush(self: pointer, ): pointer {.importc: "QGraphicsView_foregroundBrush".}
proc fcQGraphicsView_setForegroundBrush(self: pointer, brush: pointer): void {.importc: "QGraphicsView_setForegroundBrush".}
proc fcQGraphicsView_updateScene(self: pointer, rects: struct_miqt_array): void {.importc: "QGraphicsView_updateScene".}
proc fcQGraphicsView_invalidateScene(self: pointer, ): void {.importc: "QGraphicsView_invalidateScene".}
proc fcQGraphicsView_updateSceneRect(self: pointer, rect: pointer): void {.importc: "QGraphicsView_updateSceneRect".}
proc fcQGraphicsView_rubberBandChanged(self: pointer, viewportRect: pointer, fromScenePoint: pointer, toScenePoint: pointer): void {.importc: "QGraphicsView_rubberBandChanged".}
proc fcQGraphicsView_connect_rubberBandChanged(self: pointer, slot: int) {.importc: "QGraphicsView_connect_rubberBandChanged".}
proc fcQGraphicsView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsView_tr2".}
proc fcQGraphicsView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsView_tr3".}
proc fcQGraphicsView_setRenderHint2(self: pointer, hint: cint, enabled: bool): void {.importc: "QGraphicsView_setRenderHint2".}
proc fcQGraphicsView_setOptimizationFlag2(self: pointer, flag: cint, enabled: bool): void {.importc: "QGraphicsView_setOptimizationFlag2".}
proc fcQGraphicsView_setTransform2(self: pointer, matrix: pointer, combine: bool): void {.importc: "QGraphicsView_setTransform2".}
proc fcQGraphicsView_ensureVisible22(self: pointer, rect: pointer, xmargin: cint): void {.importc: "QGraphicsView_ensureVisible22".}
proc fcQGraphicsView_ensureVisible3(self: pointer, rect: pointer, xmargin: cint, ymargin: cint): void {.importc: "QGraphicsView_ensureVisible3".}
proc fcQGraphicsView_ensureVisible5(self: pointer, x: float64, y: float64, w: float64, h: float64, xmargin: cint): void {.importc: "QGraphicsView_ensureVisible5".}
proc fcQGraphicsView_ensureVisible6(self: pointer, x: float64, y: float64, w: float64, h: float64, xmargin: cint, ymargin: cint): void {.importc: "QGraphicsView_ensureVisible6".}
proc fcQGraphicsView_ensureVisible23(self: pointer, item: pointer, xmargin: cint): void {.importc: "QGraphicsView_ensureVisible23".}
proc fcQGraphicsView_ensureVisible32(self: pointer, item: pointer, xmargin: cint, ymargin: cint): void {.importc: "QGraphicsView_ensureVisible32".}
proc fcQGraphicsView_fitInView22(self: pointer, rect: pointer, aspectRadioMode: cint): void {.importc: "QGraphicsView_fitInView22".}
proc fcQGraphicsView_fitInView5(self: pointer, x: float64, y: float64, w: float64, h: float64, aspectRadioMode: cint): void {.importc: "QGraphicsView_fitInView5".}
proc fcQGraphicsView_fitInView23(self: pointer, item: pointer, aspectRadioMode: cint): void {.importc: "QGraphicsView_fitInView23".}
proc fcQGraphicsView_render2(self: pointer, painter: pointer, target: pointer): void {.importc: "QGraphicsView_render2".}
proc fcQGraphicsView_render3(self: pointer, painter: pointer, target: pointer, source: pointer): void {.importc: "QGraphicsView_render3".}
proc fcQGraphicsView_render4(self: pointer, painter: pointer, target: pointer, source: pointer, aspectRatioMode: cint): void {.importc: "QGraphicsView_render4".}
proc fcQGraphicsView_items22(self: pointer, rect: pointer, mode: cint): struct_miqt_array {.importc: "QGraphicsView_items22".}
proc fcQGraphicsView_items5(self: pointer, x: cint, y: cint, w: cint, h: cint, mode: cint): struct_miqt_array {.importc: "QGraphicsView_items5".}
proc fcQGraphicsView_items24(self: pointer, path: pointer, mode: cint): struct_miqt_array {.importc: "QGraphicsView_items24".}
